--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,26 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <title>Medicdiet Clinic | Personalized Nutrition & Dietetics</title>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Medic Diet Clinic",
+  "url": "https://medicdietclinic.com",
+  "logo": "https://medicdietclinic.com/images/MEDIc Diet clinic (2).png",
+  "founder": {
+    "@type": "Person",
+    "name": "Olusegun Glory Abiodun"
+  },
+  "description": "Medic Diet Clinic offers professional nutrition counseling and personalized diet plans to help you achieve a healthier lifestyle.",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+234xxxxxxxxxx",
+    "contactType": "Customer Service"
+  }
+}
+</script>
+
 
 </head>
 
