--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,7 @@
   <link rel="shortcut icon" href="images/MEDIc Diet clinic (2).png" type="image/x-icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Medic Diet Clinic offers professional nutrition counseling and personalized diet plans to help you achieve a healthier lifestyle. Speak with our experts today!">
-  <meta name="keywords"
-    content="nutrition, diet, dietetics, healthy eating, weight loss, Medic Diet Clinic, Olusegun Glory Abiodun">
   <meta name="author" content="Olusegun Glory Abiodun">
-  <meta name="robots" content="index, follow">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
@@ -22,7 +17,6 @@
   <link rel="stylesheet" href="/src/index.css" />
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link rel="canonical" href="https://medicdietclinic.com/" />
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
@@ -31,14 +25,14 @@
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Medic Diet Clinic",
-  "url": "https://medicdietclinic.com",
-  "logo": "https://medicdietclinic.com/images/MEDIc Diet clinic (2).png",
+  "name": "Medicdiet Clinic",
+  "url": "https://www.medicdietclinic.com",
+  "logo": "https://www.medicdietclinic.com/images/Logo.jpg",
   "founder": {
     "@type": "Person",
     "name": "Olusegun Glory Abiodun"
   },
-  "description": "Medic Diet Clinic offers professional nutrition counseling and personalized diet plans to help you achieve a healthier lifestyle.",
+  "description": "Medicdiet Clinic offers professional nutrition counseling and personalized diet plans to help you achieve a healthier lifestyle.",
   "contactPoint": {
     "@type": "ContactPoint",
     "telephone": "+234xxxxxxxxxx",
